fix: .file-size  "visibility"

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,21 +240,18 @@ blockquote {
 }
 
 #list-items.folded > li > .md-file > .file-text,
+.file-size,
 .folded .unfolded .file-size {
   display: none;
 }
 
 #list-items.folded > li > .md-file.unfolded > .file-text,
-.folded .file-size {
+.folded .file-size,
+.unfolded .file-size {
   display: block;
 }
 
-#list-items > li > .md-file.unfolded > .file-text,
-.unfolded .file-size {
-  display: none;
-}
-
-.file-size {
+#list-items > li > .md-file.unfolded > .file-text {
   display: none;
 }
 
